@@ -6,6 +6,8 @@
 // Copyright 1997-2012 by Easy Software Products.
 // Image support by Matthias Melcher, Copyright 2000-2009.
 //
+// Copyright 2013-2017 by Bill Spitzak and others.
+//
 // This library is free software. Distribution and use rights are outlined in
 // the file "COPYING" which should have been included with this file.  If this
 // file is missing or damaged, see the license at:
@@ -31,9 +33,10 @@
 #include <FL/Fl_System_Driver.H>
 #include <FL/Fl_PNG_Image.H>
 #include <FL/Fl_Shared_Image.H>
+#include <FL/fl_utf8.h>
+
 #include <stdio.h>
 #include <stdlib.h>
-#include <FL/fl_utf8.h>
 
 #if defined(HAVE_LIBPNG) && defined(HAVE_LIBZ)
 extern "C"
@@ -90,14 +93,14 @@ Fl_PNG_Image::Fl_PNG_Image (const char *filename): Fl_RGB_Image(0,0,0)
 }
 
 
-/** 
+/**
  \brief Constructor that reads a PNG image from memory.
 
  Construct an image from a block of memory inside the application. Fluid offers
  "binary Data" chunks as a great way to add image data into the C++ source code.
- name_png can be NULL. If a name is given, the image is added to the list of 
+ name_png can be NULL. If a name is given, the image is added to the list of
  shared images (see: Fl_Shared_Image) and will be available by that name.
- 
+
  \param name_png  A name given to this image or NULL
  \param buffer	  Pointer to the start of the PNG image in memory
  \param maxsize   Size in bytes of the memory buffer containing the PNG image
@@ -112,14 +115,18 @@ Fl_PNG_Image::Fl_PNG_Image (
 void Fl_PNG_Image::load_png_(const char *name_png, const unsigned char *buffer_png, int maxsize)
 {
 #if defined(HAVE_LIBPNG) && defined(HAVE_LIBZ)
-  int i;	  // Looping var
-  FILE *fp = NULL;	  // File pointer
-  int channels;	  // Number of color channels
-  png_structp pp; // PNG read pointer
-  png_infop info = 0; // PNG info pointers
-  png_bytep *rows;// PNG row pointers
+  int i;		// Looping var
+  int channels;		// Number of color channels
+  png_structp pp;	// PNG read pointer
+  png_infop info = 0;	// PNG info pointers
+  png_bytep *rows;	// PNG row pointers
   fl_png_memory png_mem_data;
   int from_memory = (buffer_png != NULL); // true if reading image from memory
+
+  // Note: The file pointer fp must not be an automatic (stack) variable
+  // to avoid potential clobbering by setjmp/longjmp (gcc: [-Wclobbered]).
+  static FILE *fp;	// intentionally initialized separately below
+  fp = NULL;		// always initialize file pointer
 
   if (!from_memory) {
     if ((fp = fl_fopen(name_png, "rb")) == NULL) {
@@ -139,9 +146,8 @@ void Fl_PNG_Image::load_png_(const char *name_png, const unsigned char *buffer_p
     w(0); h(0); d(0); ld(ERR_FORMAT);
     return;
   }
-  
-  if (setjmp(png_jmpbuf(pp)))
-  {
+
+  if (setjmp(png_jmpbuf(pp))) {
     png_destroy_read_struct(&pp, &info, NULL);
     if (!from_memory) fclose(fp);
     Fl::warning("PNG file or data \"%s\" is too large or contains errors!\n", display_name);
@@ -157,7 +163,7 @@ void Fl_PNG_Image::load_png_(const char *name_png, const unsigned char *buffer_p
     png_set_read_fn (pp, (png_voidp) &png_mem_data, png_read_data_from_mem);
   } else {
     png_init_io(pp, fp); // Initialize the PNG file read "engine"...
-  }  
+  }
 
   // Get the image dimensions and convert to grayscale or RGB...
   png_read_info(pp, info);
